Fix text being too close to the bottom on mobile

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body #body {
     max-width: 34rem;
     margin: auto;
     margin-top: 0;
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
 body #body p {
@@ -100,6 +100,7 @@ body #body p {
 @media screen and (max-width: 582px) {
     #body { 
         width: 85vw;
+        margin-bottom: 2em;
     }
 
     #header {
